Remove HazelcastTestSupport#ENVIRONMENT [HZG-15] (#1999)
Core reflection classes were reimplemented with method handles in Java 18 (JEP 416), and consequently `HazelcastTestSupport#ENVIRONMENT` no longer works. This PR removes `HazelcastTestSupport#ENVIRONMENT` and switches to `SystemStubs#withEnvironmentVariables`, which
1. uses Instrumentation API, so not likely to be broken in a future version of Java, and
2. recovers the original environment variables after the test, but
3. doesn't support parallel test execution like `HazelcastTestSupport#ENVIRONMENT`.

Fixes https://github.com/hazelcast/hazelcast/issues/26335

Why was SystemStubs chosen?
1. `HazelcastTestSupport#getEnvironmentVariables()` was an improvement over JUnit Pioneer’s implementation, and that's why it was Reflection-based. However, the security measures against reflective hacks are getting hardened in each Java version, as they try to make people use Instrumentation API instead.
2. `Mockito#mockStatic` offers thread-local auto-closing mocks of static utilities, but it doesn’t support mocking `System#getEnv`.
3. PowerMock supports it, but we don’t have it as a dependency. Also, it imposes its own JUnit runner. There is way to delegate the actual test execution to a third party runner, but it may create problems with our complex parameterized runners.
4. `SystemStubs#withEnvironmentVariables` uses Instrumentation API, and we already have a dependency to SystemStubs.

**Note:** Both `Mockito#mockStatic` and `SystemStubs#withEnvironmentVariables` uses ByteBuddy under the hood. The reason why Mockito doesn't support mocking `System` utilities unlike SystemStubs is that Mockito tries to offer a consistent API for static mocks and replacing the original `System` class with an instrumented one in a thread-local classloader seems impossible because of the involvement of `System` in classloading.

**Note:** This PR had a Reflection-based solution initially, which can be seen from the following: https://github.